--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "4.5.2",
     "com.unity.render-pipelines.universal": "10.10.1",
     "com.unity.test-framework": "1.1.33",
