Add Fluid Behavior Tree package

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,15 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "NPM",
+      "url": "https://registry.npmjs.org",
+      "scopes": [
+        "com.fluid"
+      ]
+    }
+  ],
   "dependencies": {
+    "com.fluid.behavior-tree": "2.2.3",
     "com.unity.cinemachine": "2.6.17",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ide.rider": "3.0.18",
